--- a/financeiur/package.json
+++ b/financeiur/package.json
@@ -20,13 +20,16 @@
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.0",
     "chartjs-adapter-moment": "^1.0.1",
+    "dotenv": "^16.3.1",
     "formik": "^2.4.5",
+    "lightweight-charts": "^4.1.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.21.0",
     "react-scripts": "^5.0.1",
+    "react-sticky": "^6.0.3",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.3"
   },
